TigerCompiler/TigerCompiler/ANTLR_Generated/TigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g 2012-12-07 12:31:15

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_DECL", "AND", "ARRAY_CREATION", "ARRAY_TYPE_DECL", "ASCII_ESC", "ASSIGN", "AT", "BREAK", "COMMENT", "DIV", "EQUAL", "ESC_SEQ", "EXPRESSION_LIST", "EXPRESSION_SEQ", "FOR", "FUNCTION_CALL", "FUNCTION_DECL", "GT", "GT_EQUAL", "ID", "IF_THEN", "IF_THEN_ELSE", "INT", "LET", "LT", "LT_EQUAL", "MINUS", "MUL", "NIL", "NON_EQUAL", "OR", "PLUS", "PRINTABLE_CHARACTER", "PROGRAM", "RECORD_CREATION", "RECORD_DECL", "STRING", "TYPE_DECL", "TYPE_ID", "UMINUS", "VAR_DECL", "WHILE", "WS", "'('", "')'", "','", "'.'", "':'", "';'", "'['", "']'", "'array'", "'do'", "'else'", "'end'", "'function'", "'if'", "'in'", "'of'", "'then'", "'to'", "'type'", "'var'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int ALIAS_DECL=4;
	public const int AND=5;
	public const int ARRAY_CREATION=6;
	public const int ARRAY_TYPE_DECL=7;
	public const int ASCII_ESC=8;
	public const int ASSIGN=9;
	public const int AT=10;
	public const int BREAK=11;
	public const int COMMENT=12;
	public const int DIV=13;
	public const int EQUAL=14;
	public const int ESC_SEQ=15;
	public const int EXPRESSION_LIST=16;
	public const int EXPRESSION_SEQ=17;
	public const int FOR=18;
	public const int FUNCTION_CALL=19;
	public const int FUNCTION_DECL=20;
	public const int GT=21;
	public const int GT_EQUAL=22;
	public const int ID=23;
	public const int IF_THEN=24;
	public const int IF_THEN_ELSE=25;
	public const int INT=26;
	public const int LET=27;
	public const int LT=28;
	public const int LT_EQUAL=29;
	public const int MINUS=30;
	public const int MUL=31;
	public const int NIL=32;
	public const int NON_EQUAL=33;
	public const int OR=34;
	public const int PLUS=35;
	public const int PRINTABLE_CHARACTER=36;
	public const int PROGRAM=37;
	public const int RECORD_CREATION=38;
	public const int RECORD_DECL=39;
	public const int STRING=40;
	public const int TYPE_DECL=41;
	public const int TYPE_ID=42;
	public const int UMINUS=43;
	public const int VAR_DECL=44;
	public const int WHILE=45;
	public const int WS=46;

	public TigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:99:1: program : expr EOF -> ^( PROGRAM expr ) ;
	[GrammarRule("program")]
	private AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expr1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(99, 37);
		try
		{
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:99:9: ( expr EOF -> ^( PROGRAM expr ) )
			DebugEnterAlt(1);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:99:11: expr EOF
			{
			DebugLocation(99, 11);
			PushFollow(Follow._expr_in_program616);
			expr1=expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_expr.Add(expr1.Tree);
			DebugLocation(99, 16);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program618); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 99:20: -> ^( PROGRAM expr )
			{
				DebugLocation(99, 23);
				// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:99:23: ^( PROGRAM expr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(99, 25);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(99, 33);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(99, 37);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:101:1: expr : or_expr ;
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<object, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> or_expr3 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(101, 14);
		try
		{
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:101:6: ( or_expr )
			DebugEnterAlt(1);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:101:8: or_expr
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(101, 8);
			PushFollow(Follow._or_expr_in_expr634);
			or_expr3=or_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, or_expr3.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
		}
		DebugLocation(101, 14);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_or_expr();
	partial void LeaveRule_or_expr();

	// $ANTLR start "or_expr"
	// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:103:1: or_expr : and_exp ( OR ^ and_exp )* ;
	[GrammarRule("or_expr")]
	private AstParserRuleReturnScope<object, IToken> or_expr()
	{
		EnterRule_or_expr();
		EnterRule("or_expr", 3);
		TraceIn("or_expr", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR5 = default(IToken);
		AstParserRuleReturnScope<object, IToken> and_exp4 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> and_exp6 = default(AstParserRuleReturnScope<object, IToken>);

		object OR5_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "or_expr");
		DebugLocation(103, 1);
		try
		{
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:103:9: ( and_exp ( OR ^ and_exp )* )
			DebugEnterAlt(1);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:103:11: and_exp ( OR ^ and_exp )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(103, 11);
			PushFollow(Follow._and_exp_in_or_expr642);
			and_exp4=and_exp();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, and_exp4.Tree);
			DebugLocation(103, 19);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:103:19: ( OR ^ and_exp )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:103:20: OR ^ and_exp
					{
					DebugLocation(103, 22);
					OR5=(IToken)Match(input,OR,Follow._OR_in_or_expr645); if (state.failed) return retval;
					if (state.backtracking == 0) {
					OR5_tree = (object)adaptor.Create(OR5);
					root_0 = (object)adaptor.BecomeRoot(OR5_tree, root_0);
					}
					DebugLocation(103, 24);
					PushFollow(Follow._and_exp_in_or_expr648);
					and_exp6=and_exp();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, and_exp6.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("or_expr", 3);
			LeaveRule("or_expr", 3);
			LeaveRule_or_expr();
		}
		DebugLocation(104, 1);
		} finally { DebugExitRule(GrammarFileName, "or_expr"); }
		return retval;

	}
	// $ANTLR end "or_expr"

	partial void EnterRule_and_exp();
	partial void LeaveRule_and_exp();

	// $ANTLR start "and_exp"
	// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:106:1: and_exp : comp_expr ( AND ^ comp_expr )* ;
	[GrammarRule("and_exp")]
	private AstParserRuleReturnScope<object, IToken> and_exp()
	{
		EnterRule_and_exp();
		EnterRule("and_exp", 4);
		TraceIn("and_exp", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken AND8 = default(IToken);
		AstParserRuleReturnScope<object, IToken> comp_expr7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> comp_expr9 = default(AstParserRuleReturnScope<object, IToken>);

		object AND8_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "and_exp");
		DebugLocation(106, 1);
		try
		{
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:106:9: ( comp_expr ( AND ^ comp_expr )* )
			DebugEnterAlt(1);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:106:11: comp_expr ( AND ^ comp_expr )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(106, 11);
			PushFollow(Follow._comp_expr_in_and_exp660);
			comp_expr7=comp_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, comp_expr7.Tree);
			DebugLocation(106, 21);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:106:21: ( AND ^ comp_expr )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==AND))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:106:22: AND ^ comp_expr
					{
					DebugLocation(106, 25);
					AND8=(IToken)Match(input,AND,Follow._AND_in_and_exp663); if (state.failed) return retval;
					if (state.backtracking == 0) {
					AND8_tree = (object)adaptor.Create(AND8);
					root_0 = (object)adaptor.BecomeRoot(AND8_tree, root_0);
					}
					DebugLocation(106, 27);
					PushFollow(Follow._comp_expr_in_and_exp666);
					comp_expr9=comp_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, comp_expr9.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("and_exp", 4);
			LeaveRule("and_exp", 4);
			LeaveRule_and_exp();
		}
		DebugLocation(107, 1);
		} finally { DebugExitRule(GrammarFileName, "and_exp"); }
		return retval;

	}
	// $ANTLR end "and_exp"

	partial void EnterRule_comp_expr();
	partial void LeaveRule_comp_expr();

	// $ANTLR start "comp_expr"
	// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:109:1: comp_expr : arith_expr ( ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^) arith_expr )* ;
	[GrammarRule("comp_expr")]
	private AstParserRuleReturnScope<object, IToken> comp_expr()
	{
		EnterRule_comp_expr();
		EnterRule("comp_expr", 5);
		TraceIn("comp_expr", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EQUAL11 = default(IToken);
		IToken NON_EQUAL12 = default(IToken);
		IToken LT13 = default(IToken);
		IToken GT14 = default(IToken);
		IToken LT_EQUAL15 = default(IToken);
		IToken GT_EQUAL16 = default(IToken);
		AstParserRuleReturnScope<object, IToken> arith_expr10 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> arith_expr17 = default(AstParserRuleReturnScope<object, IToken>);

		object EQUAL11_tree = default(object);
		object NON_EQUAL12_tree = default(object);
		object LT13_tree = default(object);
		object GT14_tree = default(object);
		object LT_EQUAL15_tree = default(object);
		object GT_EQUAL16_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "comp_expr");
		DebugLocation(109, 1);
		try
		{
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:2: ( arith_expr ( ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^) arith_expr )* )
			DebugEnterAlt(1);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:4: arith_expr ( ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^) arith_expr )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(110, 4);
			PushFollow(Follow._arith_expr_in_comp_expr679);
			arith_expr10=arith_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, arith_expr10.Tree);
			DebugLocation(110, 14);
			// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:14: ( ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^) arith_expr )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				switch (input.LA(1))
				{
				case EQUAL:
					{
					alt4 = 1;
					}
					break;
				case NON_EQUAL:
					{
					alt4 = 1;
					}
					break;
				case LT:
					{
					alt4 = 1;
					}
					break;
				case GT:
					{
					alt4 = 1;
					}
					break;
				case LT_EQUAL:
					{
					alt4 = 1;
					}
					break;
				case GT_EQUAL:
					{
					alt4 = 1;
					}
					break;
				}

				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:15: ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^) arith_expr
					{
					DebugLocation(110, 15);
					// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:15: ( EQUAL ^| NON_EQUAL ^| LT ^| GT ^| LT_EQUAL ^| GT_EQUAL ^)
					int alt3=6;
					try { DebugEnterSubRule(3);
					try { DebugEnterDecision(3, false);
					switch (input.LA(1))
					{
					case EQUAL:
						{
						alt3 = 1;
						}
						break;
					case NON_EQUAL:
						{
						alt3 = 2;
						}
						break;
					case LT:
						{
						alt3 = 3;
						}
						break;
					case GT:
						{
						alt3 = 4;
						}
						break;
					case LT_EQUAL:
						{
						alt3 = 5;
						}
						break;
					case GT_EQUAL:
						{
						alt3 = 6;
						}
						break;
					default:
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}

					} finally { DebugExitDecision(3); }
					switch (alt3)
					{
					case 1:
						DebugEnterAlt(1);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:16: EQUAL ^
						{
						DebugLocation(110, 21);
						EQUAL11=(IToken)Match(input,EQUAL,Follow._EQUAL_in_comp_expr682); if (state.failed) return retval;
						if (state.backtracking == 0) {
						EQUAL11_tree = (object)adaptor.Create(EQUAL11);
						root_0 = (object)adaptor.BecomeRoot(EQUAL11_tree, root_0);
						}

						}
						break;
					case 2:
						DebugEnterAlt(2);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:25: NON_EQUAL ^
						{
						DebugLocation(110, 34);
						NON_EQUAL12=(IToken)Match(input,NON_EQUAL,Follow._NON_EQUAL_in_comp_expr687); if (state.failed) return retval;
						if (state.backtracking == 0) {
						NON_EQUAL12_tree = (object)adaptor.Create(NON_EQUAL12);
						root_0 = (object)adaptor.BecomeRoot(NON_EQUAL12_tree, root_0);
						}

						}
						break;
					case 3:
						DebugEnterAlt(3);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:38: LT ^
						{
						DebugLocation(110, 40);
						LT13=(IToken)Match(input,LT,Follow._LT_in_comp_expr692); if (state.failed) return retval;
						if (state.backtracking == 0) {
						LT13_tree = (object)adaptor.Create(LT13);
						root_0 = (object)adaptor.BecomeRoot(LT13_tree, root_0);
						}

						}
						break;
					case 4:
						DebugEnterAlt(4);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:44: GT ^
						{
						DebugLocation(110, 46);
						GT14=(IToken)Match(input,GT,Follow._GT_in_comp_expr697); if (state.failed) return retval;
						if (state.backtracking == 0) {
						GT14_tree = (object)adaptor.Create(GT14);
						root_0 = (object)adaptor.BecomeRoot(GT14_tree, root_0);
						}

						}
						break;
					case 5:
						DebugEnterAlt(5);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:50: LT_EQUAL ^
						{
						DebugLocation(110, 58);
						LT_EQUAL15=(IToken)Match(input,LT_EQUAL,Follow._LT_EQUAL_in_comp_expr702); if (state.failed) return retval;
						if (state.backtracking == 0) {
						LT_EQUAL15_tree = (object)adaptor.Create(LT_EQUAL15);
						root_0 = (object)adaptor.BecomeRoot(LT_EQUAL15_tree, root_0);
						}

						}
						break;
					case 6:
						DebugEnterAlt(6);
						// C:\\Users\\Frank\\Desktop\\Compilación\\TigerCompiler\\Tiger.g:110:62: GT_EQUAL ^
						{
						DebugLocation(110, 70);
						GT_EQUAL16=(IToken)Match(input,GT_EQUAL,Follow._GT_EQUAL_in_comp_expr707); if (state.failed) return retval;
						if (state.backtracking == 0) {
						GT_EQUAL16_tree = (object)adaptor.Create(GT_EQUAL16);
						root_0 = (object)adaptor.BecomeRoot(GT_EQUAL16_tree, root_0);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(3); }

					DebugLocation(110, 73);
					PushFollow(Follow._arith_expr_in_comp_expr711);
					arith_expr17=arith_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, arith_expr17.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;
